--- a/css/style.css
+++ b/css/style.css
@@ -1341,6 +1341,8 @@ html {
   display: flex;
   align-items: center;
   margin: 0 30px 0 0;
+  border-radius: 15%;
+
 }
 #tb-servise-cms .tb-servise-section .tb-servise-text {
   width: 70%;
@@ -1438,7 +1440,7 @@ html {
   width: 80px;
   height: 80px;
   background-color: #fff;
-  border-radius: 50%;
+  /* border-radius: 50%; */
   position: relative;
   display: block;
 }
@@ -2144,7 +2146,8 @@ html {
   letter-spacing: 2px;
 }
 #tb-testimonial-cms .tb-testimonial-section {
-  background: #f0f0f0;
+  /* background: #f0f0f0; */
+  
   border-bottom: 2px solid #b3182e;
   padding: 0 100px 30px 100px;
   border-top: 30px solid #fff;
@@ -2176,7 +2179,8 @@ html {
   left: -20px;
   top: 0;
   border-left: 20px solid transparent;
-  border-bottom: 20px solid #cacaca;
+  /* border-bottom: 20px solid #cacaca; */
+  border-bottom: 20px solid white;
   transform: rotate(361deg);
 }
 #tb-testimonial-cms
@@ -2191,7 +2195,8 @@ html {
   left: auto;
   top: 0;
   border-left: 20px solid transparent;
-  border-bottom: 20px solid #cacaca;
+  /* border-bottom: 20px solid #cacaca; */
+  border-bottom: 20px solid white;
   transform: rotate(450deg);
 }
 #tb-testimonial-cms
@@ -5510,7 +5515,7 @@ html {
   width: 80px;
   height: 80px;
   background-color: #fff;
-  border-radius: 50%;
+  
   position: relative;
   display: block;
   cursor: pointer;
@@ -5553,7 +5558,7 @@ html {
   -webkit-animation-timing-function: steps;
   animation-timing-function: steps;
   opacity: 1;
-  border-radius: 50%;
+  /* border-radius: 50%; */
   border: 2px solid #fff;
   top: -25%;
   left: -25%;
@@ -6126,3 +6131,19 @@ html {
   }
 }
 /*end-contact-page*/
+
+.cm-white {
+  color:white;
+
+}
+
+.cm-border-bottom-red{
+  border-bottom: 2px solid #b3182e
+}
+
+.cm-img{
+  height:130px;
+  width: 150px;;
+  /* border-radius: 50%; */
+  
+}
